Add Travis CI badge

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-Course Cart
+Course Cart [![Build Status](https://travis-ci.org/biola/course-cart.svg)](https://travis-ci.org/biola/course-cart)
 ===========
 
 Online signups for online courses
